#31: implements modified class paths, adds test script
